--- a/kg-wedding/index.html
+++ b/kg-wedding/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /> -->
     <meta charset="UTF-8" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@0;1&family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital@0;1&family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>-= krish at ge =-</title>
+    <title>kasal ni ge at krish</title>
   </head>
   <body>
     <div id="app"></div>
